# rosalind-rust

./: Cargo.toml
src/: cmd.rs  errors.rs  main.rs
src/common/: dna.rs  fasta.rs  mod.rs
src/problems/: cons.rs  dna.rs  fib.rs  fibd.rs  gc.rs  grph.rs  hamm.rs  iev.rs  iprb.rs  lcsm.rs  lexf.rs  lgis.rs  lia.rs  mod.rs  mprt.rs  mrna.rs  orf.rs  perm.rs  prot.rs  prtm.rs  revc.rs  revp.rs  rna.rs  splc.rs  subs.rs  tran.rs
