[package]
name = "rosalind-rust"
version = "0.1.0"
authors = ["Mimi Wang <mimikwang@gmail.com>"]
description = "Rust solutions to Rosalind problems"
edition = "2021"
repository = "https://github.com/mimikwang/rosalind-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.15"
itertools = "0.10.3"
num-bigint = "0.4"
num-traits = "0.2"
